@@ -1,3 +1,5 @@
+HEAD
+	+ Retry replication button fixed
 4.0
 	+ Set version to 4.0
 	+ Include ntp as module to replicate
